# handwritten-numeral-recognition-cpp

./: CMakeLists.txt  README.md
examples/: mnist_train.cpp
include/: matrix.hpp  myutils.hpp  neuralnetwork.hpp
src/: main.cpp  matrix.cpp  myutils.cpp  neuralnetwork.cpp
src/test/: test.cpp
